--- a/ClientApp/src/custom.css
+++ b/ClientApp/src/custom.css
@@ -1,14 +1,7 @@
-/* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
+.back-link {
+    color: mediumseagreen;
 }
 
-code {
-  color: #E01A76;
-}
-
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+.back-link:hover {
+    color: mediumseagreen;
 }
