--- a/ClientApp/src/components/OrderPage.css
+++ b/ClientApp/src/components/OrderPage.css
@@ -1,4 +1,4 @@
-﻿.pizzaOrder {
+﻿.pizza-order {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -12,7 +12,7 @@
     border-radius: 6px;
 }
 
-.orderButton {
+.order-button {
     margin-top: 15px;
     height: 50px;
     color: white;
